Add styles section 15

--- a/productpage.html
+++ b/productpage.html
@@ -197,14 +197,15 @@
     <div class="s15">
       <hr class="s15_line1">
       <ul class="s15_breadcrumbs">
-         <li class="s15_breadcrumbs_item">   <a href="#"> 
-          <img src="images/productpage/home-icon.png" alt="" class="s15_home_icon"> </a>
+        <li class="s15_breadcrumbs_item">
+          <a href="#">
+            <img src="images/productpage/home-icon.png" alt="" class="s15_home_icon"> </a>
         </li>
-       <li class="s15_breadcrumbs_item"><a href="#">Women</a></li>
-         <li class="s15_breadcrumbs_item"><a href="#"> Clothing</a></li>
+        <li class="s15_breadcrumbs_item"><a href="#">Women</a></li>
+        <li class="s15_breadcrumbs_item"><a href="#"> Clothing</a></li>
         <li class="s15_breadcrumbs_item"><a href="#">Blouses & Shirts</a></li>
-         <li class="s15_breadcrumbs_item"> <a href="#"> B. young</a></li>
-           <li class="s15_breadcrumbs_item"><a href="#">Sofi Blouse</a></li>
+        <li class="s15_breadcrumbs_item"> <a href="#"> B. young</a></li>
+        <li class="s15_breadcrumbs_item"><a href="#">Sofi Blouse</a></li>
       </ul>
       <hr class="s15_line2">
     </div>
@@ -237,7 +238,7 @@
           <span>Back to</span>
           <a href="#">Women's Clothing</a>
         </div>
-        <h3 class="s16_product_name" >Sofi Blouse</h3>
+        <h3 class="s16_product_name">Sofi Blouse</h3>
         <div class="s16_price_reviews_container">
           <div class="s16_price">
             <span class="s16_price_currency">$</span>
@@ -282,13 +283,12 @@
           </div>
           <div class="s16_color_container">
             <ul class="s16_color_list">
-                <li class="s16_color_list_item"></li>
-                <li class="s16_color_list_item"></li>
-                <li class="s16_color_list_item"></li>
-                <li class="s16_color_list_item"></li>
-                <li class="s16_color_list_item"></li>
-              </ul>
-
+              <li class="s16_color_list_item"></li>
+              <li class="s16_color_list_item"></li>
+              <li class="s16_color_list_item"></li>
+              <li class="s16_color_list_item"></li>
+              <li class="s16_color_list_item"></li>
+            </ul>
           </div>
         </div>
         <div class="s16_quantity_cart_container">
@@ -303,8 +303,6 @@
       </div>
     </div>
   </div>
-
-
   <!--SECTION 17-->
   <div class="section">
     <div class="s17">
@@ -334,7 +332,6 @@
       </div>
     </div>
   </div>
-
   <!--SECTION 18-->
   <div class="section">
     <div class="s18">
@@ -343,7 +340,7 @@
           <button class="s18_container_button">
             <img src="" alt="">
           </button>
-          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_text"></span>
           <span class="s18_container_title_number"></span>
         </div>
         <div class="s18_container_content"></div>
@@ -353,7 +350,7 @@
           <button class="s18_container_button">
             <img src="" alt="">
           </button>
-          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_text"></span>
           <span class="s18_container_title_number"></span>
         </div>
         <div class="s18_container_content"></div>
@@ -363,7 +360,7 @@
           <button class="s18_container_button">
             <img src="" alt="">
           </button>
-          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_text"></span>
           <span class="s18_container_title_number"></span>
         </div>
         <div class="s18_container_content"></div>
@@ -373,7 +370,7 @@
           <button class="s18_container_button">
             <img src="" alt="">
           </button>
-          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_text"></span>
           <span class="s18_container_title_number"></span>
         </div>
         <div class="s18_container_content"></div>
@@ -383,21 +380,13 @@
           <button class="s18_container_button">
             <img src="" alt="">
           </button>
-          <span class="s18_container_title_text" ></span>
+          <span class="s18_container_title_text"></span>
           <span class="s18_container_title_number"></span>
         </div>
         <div class="s18_container_content"></div>
       </div>
-      
-  
-      
-  
     </div>
   </div>
-
-
-
-
   <!--SECTION 14-->
   <div class="section">
     <div class="s14">
