Start section 17 styles

--- a/productpage.html
+++ b/productpage.html
@@ -306,30 +306,38 @@
   <!--SECTION 17-->
   <div class="section">
     <div class="s17">
-      <div class="s17_social_container">
-        <span class="s17_social_pic_container">
-          <img src="" alt="" class="s17_social_pic">
+      <a href="">
+        <div class="s17_social_container">
+          <span class="s17_social_pic_container">
+          <img src="images/productpage/facebook-icon.png" alt="" class="s17_social_pic">
         </span>
-        <span class="s17_social_text">share<br>on facebook</span>
-      </div>
-      <div class="s17_social_container">
-        <span class="s17_social_pic_container">
-          <img src="" alt="" class="s17_social_pic">
+          <span class="s17_social_text">share<br>on facebook</span>
+        </div>
+      </a>
+      <a href="">
+        <div class="s17_social_container">
+          <span class="s17_social_pic_container">
+          <img src="images/productpage/pinterest-icon.png" alt="" class="s17_social_pic">
         </span>
-        <span class="s17_social_text">share<br>on facebook</span>
-      </div>
-      <div class="s17_social_container">
-        <span class="s17_social_pic_container">
-          <img src="" alt="" class="s17_social_pic">
+          <span class="s17_social_text">pin<br>this product</span>
+        </div>
+      </a>
+      <a href="">
+        <div class="s17_social_container">
+          <span class="s17_social_pic_container">
+          <img src="images/productpage/twitter-icon.png" alt="" class="s17_social_pic">
         </span>
-        <span class="s17_social_text">share<br>on facebook</span>
-      </div>
-      <div class="s17_social_container">
-        <span class="s17_social_pic_container">
-          <img src="" alt="" class="s17_social_pic">
+          <span class="s17_social_text">tweet<br>this product</span>
+        </div>
+      </a>
+      <a href="">
+        <div class="s17_social_container">
+          <span class="s17_social_pic_container">
+          <img src="images/productpage/mail-icon.png" alt="" class="s17_social_pic">
         </span>
-        <span class="s17_social_text">share<br>on facebook</span>
-      </div>
+          <span class="s17_social_text">email<br>a friend</span>
+        </div>
+      </a>
     </div>
   </div>
   <!--SECTION 18-->
