Start products page

--- a/productpage.html
+++ b/productpage.html
@@ -346,9 +346,9 @@
       <div class="s18_container">
         <div class="s18_container_title">
           <button class="s18_container_button">
-            <img src="" alt="">
+            <img src="images/productpage/forward-icon.png" alt="">
           </button>
-          <span class="s18_container_title_text"></span>
+          <span class="s18_container_title_text">description</span>
           <span class="s18_container_title_number"></span>
         </div>
         <div class="s18_container_content"></div>
@@ -356,9 +356,9 @@
       <div class="s18_container">
         <div class="s18_container_title">
           <button class="s18_container_button">
-            <img src="" alt="">
+            <img src="images/productpage/forward-icon.png" alt="">
           </button>
-          <span class="s18_container_title_text"></span>
+          <span class="s18_container_title_text">additional information</span>
           <span class="s18_container_title_number"></span>
         </div>
         <div class="s18_container_content"></div>
@@ -366,9 +366,21 @@
       <div class="s18_container">
         <div class="s18_container_title">
           <button class="s18_container_button">
-            <img src="" alt="">
+            <img src="images/productpage/forward-icon.png" alt="">
           </button>
-          <span class="s18_container_title_text"></span>
+          <span class="s18_container_title_text">reviews</span>
+        <<span class="s18_container_title_text">(</span>
+         <span class="s18_container_title_number">12</span> 
+         <span class="s18_container_title_text">)</span>
+        </div>
+        <div class="s18_container_content"></div>
+      </div>
+      <div class="s18_container">
+        <div class="s18_container_title">
+          <button class="s18_container_button">
+            <img src="images/productpage/forward-icon.png" alt="">
+          </button>
+          <span class="s18_container_title_text">helpful links</span>
           <span class="s18_container_title_number"></span>
         </div>
         <div class="s18_container_content"></div>
@@ -376,19 +388,9 @@
       <div class="s18_container">
         <div class="s18_container_title">
           <button class="s18_container_button">
-            <img src="" alt="">
+            <img src="images/productpage/forward-icon.png" alt="">
           </button>
-          <span class="s18_container_title_text"></span>
-          <span class="s18_container_title_number"></span>
-        </div>
-        <div class="s18_container_content"></div>
-      </div>
-      <div class="s18_container">
-        <div class="s18_container_title">
-          <button class="s18_container_button">
-            <img src="" alt="">
-          </button>
-          <span class="s18_container_title_text"></span>
+          <span class="s18_container_title_text">make a gift</span>
           <span class="s18_container_title_number"></span>
         </div>
         <div class="s18_container_content"></div>
