Finish product page

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 						<h3 class="slide_text_line4">
 							woman collection
 						</h3>
-						<a href="#"> <button type="text" class="s3_button">
+						<a href="product.html"> <button type="text" class="s3_button">
 								<span class="s3_button_text" >shop now</span>
 								<img src="images/3-button-arrow.png" alt="" class="s3_button_image" >
 							</button>
@@ -241,7 +241,7 @@
 						<h3 class="slide_text_line4">
 							woman collection
 						</h3>
-						<a href="#"> <button type="text" class="s3_button">
+						<a href="product.html"> <button type="text" class="s3_button">
 								<span class="s3_button_text" >shop now</span>
 								<img src="images/3-button-arrow.png" alt="" class="s3_button_image" >
 							</button>
@@ -372,7 +372,7 @@
 					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-1.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -401,7 +401,7 @@
 						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-2.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -428,7 +428,7 @@
 					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-3.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -457,7 +457,7 @@
 						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-4.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -487,7 +487,7 @@
 					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-5.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -516,7 +516,7 @@
 						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-4.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -547,7 +547,7 @@
 						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -576,7 +576,7 @@
 						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-2.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -606,7 +606,7 @@
 					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-3.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -635,7 +635,7 @@
 						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -666,7 +666,7 @@
 						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-4.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -691,7 +691,7 @@
 					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-5.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -725,7 +725,7 @@
 						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-6.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -750,7 +750,7 @@
 					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-3.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -781,7 +781,7 @@
 						</div>
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-2.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -806,7 +806,7 @@
 					<div class="s6_8_tile fade ">
 						<div class="s6_8_tile_image_container">
 							<img src="images/6-1.jpg" alt="" class="s6_8_tile_image">
-							<a href="#">
+							<a href="product.html">
 								<div class="cart_hover">
 									<img src="images/6-cart.png" alt="">
 									<br>
@@ -855,7 +855,7 @@
 				<div class="s6_8_tile">
 					<div class="s6_8_tile_image_container">
 						<img src="images/8-1.jpg" alt="" class="s6_8_tile_image">
-						<a href="#">
+						<a href="product.html">
 							<div class="cart_hover">
 								<img src="images/6-cart.png" alt="">
 								<br>
@@ -884,7 +884,7 @@
 					</div>
 					<div class="s6_8_tile_image_container">
 						<img src="images/8-2.jpg" alt="" class="s6_8_tile_image">
-						<a href="#">
+						<a href="product.html">
 							<div class="cart_hover">
 								<img src="images/6-cart.png" alt="">
 								<br>
@@ -911,7 +911,7 @@
 				<div class="s6_8_tile">
 					<div class="s6_8_tile_image_container">
 						<img src="images/8-3.jpg" alt="" class="s6_8_tile_image">
-						<a href="#">
+						<a href="product.html">
 							<div class="cart_hover">
 								<img src="images/6-cart.png" alt="">
 								<br>
@@ -940,7 +940,7 @@
 					</div>
 					<div class="s6_8_tile_image_container">
 						<img src="images/8-4.jpg" alt="" class="s6_8_tile_image">
-						<a href="#">
+						<a href="product.html">
 							<div class="cart_hover">
 								<img src="images/6-cart.png" alt="">
 								<br>
