Work on section 20 right

--- a/product.html
+++ b/product.html
@@ -177,7 +177,7 @@
           </div>
           <div class="s2_dropdown">
             <div class="s2_dropbtn_container">
-              <button class="s2_dropbtn">clearence</button>
+              <button class="s2_dropbtn">clearance</button>
               <img src="images/caret-dark.png" alt="">
             </div>
             <div class="s2_dropdown_content">
