Work on section 20 right

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
             </div>
           </div>
         </div>
-        <div class="s20_sort_pagination">
+        <div class="s20_sort_pagination s20_sort_pagination_bottom">
           <div class="s20_pagination_container">
             <div class="s20_pagination_container_text">
               <span class="s20_pagination_container_text_item">Showing</span>
@@ -887,9 +887,6 @@
               </div>
             </div>
 
-
-
-
           </div>
         </div>
         <div class="s20_right_container">
@@ -904,7 +901,7 @@
               </p>
             </div>
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-10.jpg" alt="" class="s20_right_container_tile_pic">
+              <img src="images/productspage/20-11.jpg" alt="" class="s20_right_container_tile_pic">
               <h4 class="s20_right_container_tile_name">folicia silk shirt</h4>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
@@ -912,7 +909,7 @@
               </p>
             </div>
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-10.jpg" alt="" class="s20_right_container_tile_pic">
+              <img src="images/productspage/20-12.jpg" alt="" class="s20_right_container_tile_pic">
               <h4 class="s20_right_container_tile_name">laylala shirt</h4>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
@@ -925,7 +922,7 @@
           <div class="s20_right_container_title">featured products</div>
           <div class="s20_right_container_body">
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-10.jpg" alt="" class="s20_right_container_tile_pic">
+              <img src="images/productspage/20-13.jpg" alt="" class="s20_right_container_tile_pic">
               <h4 class="s20_right_container_tile_name">basic sunglasses</h4>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
@@ -933,7 +930,7 @@
               </p>
             </div>
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-10.jpg" alt="" class="s20_right_container_tile_pic">
+              <img src="images/productspage/20-14.jpg" alt="" class="s20_right_container_tile_pic">
               <h4 class="s20_right_container_tile_name">billie j</h4>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
@@ -941,7 +938,7 @@
               </p>
             </div>
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-10.jpg" alt="" class="s20_right_container_tile_pic">
+              <img src="images/productspage/20-15.jpg" alt="" class="s20_right_container_tile_pic">
               <h4 class="s20_right_container_tile_name">sandie shopperbag</h4>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
