Add accordion s20 right

--- a/index.html
+++ b/index.html
@@ -828,9 +828,9 @@
               </div>
               <div class="s20_category_content">
                 <ul class="s20_category_list">
-                  <li class="s20_category_list_item">Clothes</li>
-                  <li class="s20_category_list_item">Shoes</li>
-                  <li class="s20_category_list_item">Accessories</li>
+                  <li class="s20_category_list_item"><a href="#">Clothes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Shoes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Accessories</a></li>
                 </ul>
               </div>
             </div>
@@ -841,9 +841,9 @@
               </div>
               <div class="s20_category_content">
                 <ul class="s20_category_list">
-                  <li class="s20_category_list_item">Clothes</li>
-                  <li class="s20_category_list_item">Shoes</li>
-                  <li class="s20_category_list_item">Accessories</li>
+                  <li class="s20_category_list_item"><a href="#">Clothes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Shoes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Accessories</a></li>
                 </ul>
               </div>
             </div>
@@ -854,9 +854,9 @@
               </div>
               <div class="s20_category_content">
                 <ul class="s20_category_list">
-                  <li class="s20_category_list_item">Clothes</li>
-                  <li class="s20_category_list_item">Shoes</li>
-                  <li class="s20_category_list_item">Accessories</li>
+                  <li class="s20_category_list_item"><a href="#">Clothes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Shoes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Accessories</a></li>
                 </ul>
               </div>
             </div>
@@ -867,9 +867,9 @@
               </div>
               <div class="s20_category_content">
                 <ul class="s20_category_list">
-                  <li class="s20_category_list_item">Clothes</li>
-                  <li class="s20_category_list_item">Shoes</li>
-                  <li class="s20_category_list_item">Accessories</li>
+                  <li class="s20_category_list_item"><a href="#">Clothes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Shoes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Accessories</a></li>
                 </ul>
               </div>
             </div>
@@ -880,37 +880,54 @@
               </div>
               <div class="s20_category_content">
                 <ul class="s20_category_list">
-                  <li class="s20_category_list_item">Clothes</li>
-                  <li class="s20_category_list_item">Shoes</li>
-                  <li class="s20_category_list_item">Accessories</li>
+                  <li class="s20_category_list_item"><a href="#">Clothes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Shoes</a></li>
+                  <li class="s20_category_list_item"><a href="#">Accessories</a></li>
                 </ul>
               </div>
             </div>
-
+            <div class="s20_category_container">
+              <div class="s20_category_title">
+                <span class="s20_category_title_text">select your size</span>
+              </div>
+              <ul class="s20_size_list">
+                <li class="s20_size_list_item">xs</li>
+                <li class="s20_size_list_item">s</li>
+                <li class="s20_size_list_item">m</li>
+                <li class="s20_size_list_item">l</li>
+                <li class="s20_size_list_item">xl</li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="s20_right_container">
           <div class="s20_right_container_title">on sale</div>
           <div class="s20_right_container_body">
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-10.jpg" alt="" class="s20_right_container_tile_pic">
-              <h4 class="s20_right_container_tile_name">pintuck tank</h4>
+              <a href="product.html">
+                <img src="images/productspage/20-10.jpg" alt="" class="s20_right_container_tile_pic">
+                <h4 class="s20_right_container_tile_name">pintuck tank</h4>
+              </a>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
                 <span class="s20_right_container_tile_price_number">45.55</span>
               </p>
             </div>
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-11.jpg" alt="" class="s20_right_container_tile_pic">
-              <h4 class="s20_right_container_tile_name">folicia silk shirt</h4>
+              <a href="product.html">
+                <img src="images/productspage/20-11.jpg" alt="" class="s20_right_container_tile_pic">
+                <h4 class="s20_right_container_tile_name">folicia silk shirt</h4>
+              </a>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
                 <span class="s20_right_container_tile_price_number">69.49</span>
               </p>
             </div>
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-12.jpg" alt="" class="s20_right_container_tile_pic">
-              <h4 class="s20_right_container_tile_name">laylala shirt</h4>
+              <a href="product.html">
+                <img src="images/productspage/20-12.jpg" alt="" class="s20_right_container_tile_pic">
+                <h4 class="s20_right_container_tile_name">laylala shirt</h4>
+              </a>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
                 <span class="s20_right_container_tile_price_number">78.25</span>
@@ -922,24 +939,30 @@
           <div class="s20_right_container_title">featured products</div>
           <div class="s20_right_container_body">
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-13.jpg" alt="" class="s20_right_container_tile_pic">
-              <h4 class="s20_right_container_tile_name">basic sunglasses</h4>
+              <a href="product.html">
+                <img src="images/productspage/20-13.jpg" alt="" class="s20_right_container_tile_pic">
+                <h4 class="s20_right_container_tile_name">basic sunglasses</h4>
+              </a>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
                 <span class="s20_right_container_tile_price_number">14.95</span>
               </p>
             </div>
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-14.jpg" alt="" class="s20_right_container_tile_pic">
-              <h4 class="s20_right_container_tile_name">billie j</h4>
+              <a href="product.html">
+                <img src="images/productspage/20-14.jpg" alt="" class="s20_right_container_tile_pic">
+                <h4 class="s20_right_container_tile_name">billie j</h4>
+              </a>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
                 <span class="s20_right_container_tile_price_number">69.49</span>
               </p>
             </div>
             <div class="s20_right_container_tile">
-              <img src="images/productspage/20-15.jpg" alt="" class="s20_right_container_tile_pic">
-              <h4 class="s20_right_container_tile_name">sandie shopperbag</h4>
+              <a href="product.html">
+                <img src="images/productspage/20-15.jpg" alt="" class="s20_right_container_tile_pic">
+                <h4 class="s20_right_container_tile_name">sandie shopperbag</h4>
+              </a>
               <p class="s20_right_container_tile_price">
                 <span class="s20_right_container_tile_price_currency">$</span>
                 <span class="s20_right_container_tile_price_number">69.95</span>
