--- a/product.html
+++ b/product.html
@@ -77,7 +77,7 @@
   <div class="section2">
     <div class="s2">
       <div class="s2_main">
-        <a href="#">
+        <a href="index.html">
           <div class="s2_logo_section"></div>
         </a>
         <div class="s2_cart">
