Add "load more" button

--- a/product.html
+++ b/product.html
@@ -539,6 +539,8 @@
         </div>
       </div>
     </div>
+    <!--Load more button-->
+		<button type="text" class="load_more_button">load more</button>
   </div>
   <!--SECTION 11-->
   <div class="section">
