Add preloader. Fix IE and Firefox bugs

--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-					crossorigin="anonymous">-->
-	<!--<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">-->
-	<!--<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">-->
-	<!--<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">-->
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
 	  crossorigin="anonymous">
-	<!--<link rel="stylesheet" href="carousel.css">-->
 	<link rel="stylesheet" href="css/style.css">
-	<!--<link type="text/css" href="scrollbar/jquery.jscrollpane.css" rel="stylesheet" media="all" />-->
 </head>
 
 <body>
+	<!--PRELOADER-->
+	<div class="preloader">
+		<img src="images/preloader.gif">
+	</div>
 	<!--SECTION 1-->
 	<div class="section s1">
 		<div class="s1_container">
@@ -1151,11 +1148,6 @@
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-					crossorigin="anonymous"></script>-->
-	<!--<script type="text/javascript" src="scrollbar/jquery.mousewheel.js"></script>-->
-	<!--<script type="text/javascript" src="scrollbar/jquery.jscrollpane.min.js"></script>-->
-	<!--<script type="text/javascript" src="bootstrap.min.js"></script>-->
 	<script src="javascript/js.js" type="text/javascript"></script>
 </body>
 
